ELECTRON: UI: Minor alignment fix
Different font awesome icons have different widths which messes with alignment, work around this

--- a/src/frontend/electron_vue/src/css/novo.less
+++ b/src/frontend/electron_vue/src/css/novo.less
@@ -250,3 +250,7 @@ input[type=range] {
     border-color: var(--error-color) !important;
   }
 }
+
+.transactionicon {
+  width: 25px;
+}
